--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:id="@+id/main"
-    tools:context=".MainActivity">
+    tools:context="com.raihanmahesa.MainActivity">
 
     <!-- Header Section -->
     <TextView
