--- a/app/src/main/res/layout/card_data_pelanggan.xml
+++ b/app/src/main/res/layout/card_data_pelanggan.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp"
+    android:id="@+id/cvCARD_PELANGGAN"
     android:layout_marginTop="10dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp">
@@ -60,10 +61,10 @@
                 android:layout_marginBottom="2dp"/>
 
             <TextView
-                android:id="@+id/tvCARD_PELANGGAN_terdaftar"
+                android:id="@+id/tvCARD_PELANGGAN_cabang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/card_terdaftar"
+                android:text="@string/card_cabang"
                 android:textSize="14sp"
                 android:layout_marginBottom="8dp"/>
 
