--- a/app/src/main/res/layout/card_data_pegawai.xml
+++ b/app/src/main/res/layout/card_data_pegawai.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cvCARD_PEGAWAI"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="4dp"
     android:layout_marginTop="10dp"
